trying to fix css on mobile

--- a/site.css
+++ b/site.css
@@ -30,6 +30,7 @@
 
 .img-header > img{
     flex: 1;
+    width: auto;
 }
 
 .index-contents{
